--- a/index.css
+++ b/index.css
@@ -1,28 +1,40 @@
-div {
+
+div{
+    height: 100vh;
+}
+
+.form-section {
     background-color: rgb(157, 155, 155, 0.55);
     text-align: center;
     width: 100%;
-    height: 50px;
+    height: 25vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: center
 }
+
 form {
     height: 100%;
 }
-button {
+
+input[type="submit"] {
     height: 50%;
     font-size: 17px;
     background-color: rgb(157, 155, 155, 0.55);
     padding: 0%;
     border: black 1px solid;
 }
-input{
+
+input[type="text"] {
     border: none;
     font-size: 17px;
     width: 50%;
     height: 50%;
     padding: 0;
 
-  }
+}
+
+.hidden {
+    display: none;
+}
