--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ div{
 }
 
 .form-section {
-    background-color: rgb(157, 155, 155, 0.55);
+    background-color: rgba(157, 155, 155, 0.55);
     text-align: center;
     width: 100%;
     height: 25vh;
@@ -21,7 +21,7 @@ form {
 input[type="submit"] {
     height: 50%;
     font-size: 17px;
-    background-color: rgb(157, 155, 155, 0.55);
+    background-color: rgba(157, 155, 155, 0.55);
     padding: 0%;
     border: black 1px solid;
 }
